--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/63eb13ac5c.js" crossorigin="anonymous"></script>
     <title>To Do List</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="top">
+            <input type="text" placeholder=" Task to be Done">
+            <button>Add</button>
+        </div>
+        <div class="bottom">
 
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
